--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,14 @@
     <artifactId>org.apache.sling.validation.reactor</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
+
+    <parent>
+        <groupId>org.apache.sling</groupId>
+        <artifactId>sling</artifactId>
+        <version>22</version>
+        <relativePath>../../../parent/pom.xml</relativePath>
+    </parent>
+
     <modules>
         <module>api</module>
         <module>core</module>
