SLING-4602 : Migrate launchpad/testing-war to provisioning model
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1673616 13f79535-47bb-0310-9956-ffa450edef68

--- a/launchpad/testing-war/pom.xml
+++ b/launchpad/testing-war/pom.xml
@@ -74,10 +74,11 @@
                             <directory>${basedir}</directory>
                             <includes>
                                 <include>derby.log</include>
-                                <include>cachedir</include>
                                 <include>sling</include>
-                                <include>jackrabbit</include>
                             </includes>
+                        </fileset>
+                        <fileset>
+                            <directory>sling</directory>
                         </fileset>
                     </filesets>
                 </configuration>
