SLING-4635 : Topology related jobs shouldn't be scheduled if topology is unclear/not available
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1674827 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/commons/scheduler/pom.xml
+++ b/bundles/commons/scheduler/pom.xml
@@ -85,7 +85,7 @@
                             !weblogic.jdbc.jts,
                             !weblogic.jdbc.vendor.oracle,
                             org.apache.sling.discovery;resolution:=optional,
-                            !org.apache.sling.settings;resolution:=optional,
+                            org.apache.sling.settings;resolution:=optional,
                             *                        
                         </Import-Package>
                         <DynamicImport-Package>
