Add missing plugin versions
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1675798 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/scripting/scala/script/pom.xml
+++ b/contrib/scripting/scala/script/pom.xml
@@ -43,6 +43,7 @@
             <plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
+                <version>2.14.1</version>
                 <executions>
                     <execution>
                         <goals>
@@ -59,6 +60,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-eclipse-plugin</artifactId>
+                <version>2.9</version>
                 <configuration>
                     <downloadSources>true</downloadSources>
                     <downloadJavadocs>true</downloadJavadocs>
