Move debian package creation into separate profile
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1675816 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -25,6 +25,7 @@
         <groupId>org.apache</groupId>
         <artifactId>apache</artifactId>
         <version>8</version>
+        <relativePath />
     </parent>
 
     <groupId>org.apache.sling</groupId>
@@ -142,11 +143,22 @@
           <module>scripting/thymeleaf</module>
           <module>scripting/velocity</module>
           <module>scripting/xproc</module>
-          <module>launchpad/karaf</module>
           <module>launchpad/testing</module>
-          <module>launchpad/debian</module>
+                <module>launchpad/karaf</module>
     </modules>
     <profiles>
+        <profile>
+            <!--
+              Allow the debian package to be excluded, as it might be slow/stopping
+            -->
+            <id>debian</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <modules>
+                <module>launchpad/debian</module>
+            </modules>
+        </profile>
         <profile>
             <!--
               Allow the integration tests to be excluded, as they might be slow
