Add excludes for rat
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1676257 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/commons/mime/pom.xml
+++ b/bundles/commons/mime/pom.xml
@@ -67,6 +67,16 @@
                     </instructions>
                 </configuration>
             </plugin>
+           <plugin>
+                <groupId>org.apache.rat</groupId>
+                <artifactId>apache-rat-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>src/main/resources/res/jquery.treeTable.css</exclude>
+                        <exclude>src/main/resources/res/jquery.treeTable.min.js</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <reporting>
