Add missing licence header and excludes for rat
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1676259 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/jcr/contentloader/pom.xml
+++ b/bundles/jcr/contentloader/pom.xml
@@ -69,6 +69,15 @@
           </instructions>
         </configuration>
       </plugin>
+            <plugin>
+                <groupId>org.apache.rat</groupId>
+                <artifactId>apache-rat-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>src/test/resources/reader/testfile.txt</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
     </plugins>
   </build>
 
