Add missing licence header and exclude file from rat
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1676268 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/scripting/jsp-taglib/pom.xml
+++ b/bundles/scripting/jsp-taglib/pom.xml
@@ -60,6 +60,15 @@
 					</instructions>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.rat</groupId>
+                <artifactId>apache-rat-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>src/main/resources/ESAPI.properties</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
